--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 				<a href="#" class="nav-link">Home</a>
 			</li>
 			<li class="nav-item">
-				<a href="#" class="nav-link">About</a>
+				<a href="#" class="nav-link">About us</a>
 			</li>
 			<li class="nav-item">
 				<a href="#" class="nav-link">Contact</a>
 			</li>
 			<li class="nav-item">
-				<a href="#" class="nav-link">Magazine</a>
+				<a href="#" class="nav-link">Magazines</a>
 			</li>
 			
 		</ul>
